# pde

./: Cargo.toml  README.md  install.sh  publish.sh
src/: commands.rs  config.rs  main.rs  modules.rs  utils.rs
src/commands/: application.rs  brightness.rs  install.rs  monitor.rs  theme.rs  volume.rs
src/config/: brightness_config.rs  defaults.rs  general_config.rs  parse_utils.rs  profiles.rs  profiles_config.rs  theme_config.rs  volume_config.rs
src/config/profiles/: module_config.rs  profiles_config.rs  tools_config.rs
src/modules/: brightness.rs  flatpak.rs  notification.rs  volume.rs  wallpaper.rs  wallust.rs
src/utils/: ascii_utils.rs  command_extensions.rs  image_utils.rs  notification.rs  path_extensions.rs  volume.rs
