[package]
name = "pde"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
hyprland = "0.3.13"
image = "0.25.2"
reqwest = { version = "0.12.7", features = ["blocking"] }
serde = { version = "1.0.209", features = ["derive"] }
toml = "0.8.19"
zip = "2.2.0"
